--- a/jinstapaper-core/pom.xml
+++ b/jinstapaper-core/pom.xml
@@ -152,6 +152,14 @@
 			<version>4.8.1</version>
 		</dependency>
 	</dependencies>
+    <repositories>
+    <repository>
+            <id>maven2-repository.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
+     </repositories>
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<plugins>
