--- a/jinstapaper-core/pom.xml
+++ b/jinstapaper-core/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.idm.jinstapaper</groupId>
 	<artifactId>jinstapaper-core</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>jinstapaper-core</name>
 	<description>A Java library for the Instapaper API</description>
 	<url>http://jinstapaper.org/</url>
