--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>jinstapaper</name>
-	<description>A Java library for the Instapaper API</description>
+	<description>A Java library for the Instapaper Simple and Full API</description>
 	<url>http://jinstapaper.org/</url>
 	<licenses>
 		<license>
@@ -16,9 +16,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com/jinstapaper/jinstapaper</url>
-		<connection>scm:git@github.com/jinstapaper/jinstapaper.git</connection>
-		<developerConnection>scm:git@github.com/jinstapaper/jinstapaper.git</developerConnection>
+		<url>https://github.com/dzontak/jinstapaper</url>
+		<connection>scm:git@github.com/dzontak/jinstapaper.git</connection>
+		<developerConnection>scm:git@github.com/dzontak/jinstapaper.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
@@ -35,64 +35,19 @@
 		</developer>
 	</developers>
 	<issueManagement>
-		<system>Jira</system>
-		<url>http://jinstapaper.org/jira/browse/JIP</url>
+		<system>Github</system>
+		<url>https://github.com/dzontak/jinstapaper/issues</url>
 	</issueManagement>
-	<mailingLists>
-		<mailingList>
-			<name>jinstapaper</name>
-			<subscribe>jinstapaper-subscribe@googlegroups.com</subscribe>
-			<unsubscribe>jinstapaper-unsubscribe@googlegroups.com</unsubscribe>
-			<post>jinstapaper@googlegroups.com</post>
-			<archive>http://groups.google.com/group/jinstapaper</archive>
-		</mailingList>
-	</mailingLists>
-	<distributionManagement>
-
+	<repositories>
 		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Nexus Release Repository</name>
-			<uniqueVersion>false</uniqueVersion>
-			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<id>maven2-repository.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<layout>default</layout>
 		</repository>
-
-		<snapshotRepository>
-			<id>org.idm.jinstapaper</id>
-			<name>jinstapaper.org Repository</name>
-			<uniqueVersion>false</uniqueVersion>
-			<url>file:${user.home}/maven2/</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<profiles>
-		<profile>
-			<id>release-sign-artifacts</id>
-			<activation>
-				<property>
-					<name>performRelease</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.3</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	</repositories>
 	<modules>
-		<module>jinstapaper-core</module>
+		<module>jinstapaper-fullclient</module>
+		<module>jinstapaper-simpleclient</module>
 	</modules>
 </project>
