--- a/jinstapaper-fullclient/pom.xml
+++ b/jinstapaper-fullclient/pom.xml
@@ -105,6 +105,12 @@
 			<version>1.8.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.idm.jinstapaper</groupId>
+			<artifactId>jinstapaper-core</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 	<repositories>
 		<repository>
