--- a/jinstapaper-simpleclient/pom.xml
+++ b/jinstapaper-simpleclient/pom.xml
@@ -17,7 +17,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-<dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -66,6 +66,11 @@
 			<groupId>com.sun.jersey.contribs.jersey-oauth</groupId>
 			<artifactId>oauth-client</artifactId>
 			<version>1.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.idm.jinstapaper</groupId>
+			<artifactId>jinstapaper-core</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
