--- a/insta4j-client/pom.xml
+++ b/insta4j-client/pom.xml
@@ -3,17 +3,17 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>insta4j</artifactId>
-		<groupId>org.idm.jinstapaper</groupId>
+		<groupId>org.idm.insta4j</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.idm.jinstapaper</groupId>
+	<groupId>org.idm.insta4j</groupId>
 	<artifactId>insta4j-client</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>insta4j-client</name>
 	<description>A Java library for the Instapaper full API</description>
-	<url>http://jinstapaper.org/</url>
+	<url>https://github.com//dzontak/insta4j</url>
 	<licenses>
 		<license>
 			<name>Apache License 2.0</name>
@@ -22,9 +22,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com//dzontak/jinstapaper</url>
-		<connection>scm:git@github.com/dzontak/jinstapaper.git</connection>
-		<developerConnection>scm:git@github.com/dzontak/jinstapaper.git</developerConnection>
+		<url>https://github.com//dzontak/insta4j</url>
+		<connection>scm:git@github.com/dzontak/insta4j.git</connection>
+		<developerConnection>scm:git@github.com/dzontak/insta4j.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
@@ -42,7 +42,7 @@
 	</developers>
 	<issueManagement>
 		<system>Github</system>
-		<url>https://github.com/dzontak/jinstapaper/issues</url>
+		<url>https://github.com/dzontak/insta4j/issues</url>
 	</issueManagement>
 	<dependencies>
 		<dependency>
@@ -110,7 +110,7 @@
 			<version>1.8.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.idm.jinstapaper</groupId>
+			<groupId>org.idm.insta4j</groupId>
 			<artifactId>insta4j-core</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
