--- a/insta4j-core/pom.xml
+++ b/insta4j-core/pom.xml
@@ -2,7 +2,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>insta4j</artifactId>
-		<groupId>org.idm.jinstapaper</groupId>
+		<groupId>org.idm.insta4j</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 	<name>insta4j-core</name>
 	<description>A Java library for the Instapaper full API</description>
-	<url>http://jinstapaper.org/</url>
+	<url>https://github.com//dzontak/insta4j</url>
 	<licenses>
 		<license>
 			<name>Apache License 2.0</name>
@@ -19,9 +19,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com//dzontak/jinstapaper</url>
-		<connection>scm:git@github.com/dzontak/jinstapaper.git</connection>
-		<developerConnection>scm:git@github.com/dzontak/jinstapaper.git</developerConnection>
+		<url>https://github.com//dzontak/insta4j</url>
+		<connection>scm:git@github.com/dzontak/insta4j.git</connection>
+		<developerConnection>scm:git@github.com/dzontak/insta4j.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
