--- a/insta4j-client/pom.xml
+++ b/insta4j-client/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
+			<version>4.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
@@ -125,7 +125,38 @@
 	</repositories>
 	<build>
 		<defaultGoal>install</defaultGoal>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/java</directory>
+				<includes>
+					<include>**/*.java</include>
+				</includes>
+			</testResource>
+			<testResource>
+				<directory>${basedir}/src/test/resources</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+		</testResources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<forkMode>always</forkMode>
+					<enableAssertions>false</enableAssertions>
+					<!--skipTests>true</skipTests-->
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.9</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
@@ -137,7 +168,7 @@
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<source>1.5</source>
-					<target>jsr14</target>
+					<target>1.5</target>
 				</configuration>
 				<version>2.3.2</version>
 			</plugin>
@@ -181,7 +212,7 @@
 						</goals>
 						<configuration>
 							<excludePackageNames>
-								jinstapaper.internal.*
+								insta4j.internal.*
 							</excludePackageNames>
 						</configuration>
 					</execution>
@@ -202,6 +233,15 @@
 			</plugin>
 		</plugins>
 	</build>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.4.2</version>
+			</plugin>
+		</plugins>
+	</reporting>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
