--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>pom</packaging>
 	<name>insta4j</name>
 	<description>A Java library for the Instapaper Simple and Full API</description>
-	<url>https://github.com//dzontak/insta4j</url>
+	<url>http://dzontak.github.com/insta4j/</url>
 	<licenses>
 		<license>
 			<name>Apache License 2.0</name>
