--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com//dzontak/insta4j</url>
+		<url>https://github.com/dzontak/insta4j</url>
 		<connection>scm:git@github.com/dzontak/insta4j.git</connection>
 		<developerConnection>scm:git@github.com/dzontak/insta4j.git</developerConnection>
 	</scm>
