--- a/insta4j-client/src/main/resources/insta4j.properties
+++ b/insta4j-client/src/main/resources/insta4j.properties
@@ -1,2 +1,16 @@
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+#   you may not use this file except in compliance with the License.
+#   You may obtain a copy of the License at
+#
+#        http://www.apache.org/licenses/LICENSE-2.0
+#
+#   Unless required by applicable law or agreed to in writing, software
+#   distributed under the License is distributed on an "AS IS" BASIS,
+#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#   See the License for the specific language governing permissions and
+#   limitations under the License.
+#
+
 oauth.consumer.key=4bOs6ZpYosPYwZnUcSaWa9TH4vAHQ1SRzNaicY22Tk4Ax6GWQv
 oauth.consumer.secret=nk5LqpiquzhQoHoAruTZ3tempCU1s5ptR83xvBIDFoMRpWhMMX
