--- a/insta4j-client/pom.xml
+++ b/insta4j-client/pom.xml
@@ -37,8 +37,8 @@
 	</licenses>
 	<scm>
 		<url>https://github.com//dzontak/insta4j</url>
-		<connection>scm:git@github.com/dzontak/insta4j.git</connection>
-		<developerConnection>scm:git@github.com/dzontak/insta4j.git</developerConnection>
+		<connection>scm:git:git@github.com/dzontak/insta4j.git</connection>
+		<developerConnection>scm:git:git@github.com/dzontak/insta4j.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
@@ -247,15 +247,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.4.2</version>
-			</plugin>
-		</plugins>
-	</reporting>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
