--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ooloo.insta4j</groupId>
 	<artifactId>insta4j</artifactId>
@@ -31,8 +36,8 @@
 	</licenses>
 	<scm>
 		<url>https://github.com/dzontak/insta4j</url>
-		<connection>scm:git@github.com/dzontak/insta4j.git</connection>
-		<developerConnection>scm:git@github.com/dzontak/insta4j.git</developerConnection>
+		<connection>scm:git:git@github.com/dzontak/insta4j.git</connection>
+		<developerConnection>scm:git:git@github.com/dzontak/insta4j.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
