--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
 	</licenses>
 	<scm>
 		<url>https://github.com/dzontak/insta4j</url>
-		<connection>scm:git:git@github.com/dzontak/insta4j.git</connection>
-		<developerConnection>scm:git:git@github.com/dzontak/insta4j.git</developerConnection>
+		<connection>scm:git:git://github.com/dzontak/insta4j.git</connection>
+		<developerConnection>scm:git:git://github.com/dzontak/insta4j.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
