changed groupid to insta4j

--- a/insta4j-core/pom.xml
+++ b/insta4j-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.ooloo.insta4j</groupId>
+	<groupId>insta4j</groupId>
 	<artifactId>insta4j-core</artifactId>
 	<packaging>jar</packaging>
 	<name>insta4j-core</name>
