--- a/insta4j-client/pom.xml
+++ b/insta4j-client/pom.xml
@@ -17,11 +17,11 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>insta4j</artifactId>
-		<groupId>org.ooloo.insta4j</groupId>
+		<groupId>com.idtmatter</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>insta4j</groupId>
+	<groupId>com.idtmatter</groupId>
 	<artifactId>insta4j-client</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -124,7 +124,7 @@
 			<version>1.8.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.ooloo.insta4j</groupId>
+			<groupId>com.idtmatter</groupId>
 			<artifactId>insta4j-core</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
