--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com/dzontak/insta4j</url>
-		<connection>scm:git:git://github.com/dzontak/insta4j.git</connection>
-		<developerConnection>scm:git:git://github.com/dzontak/insta4j.git</developerConnection>
+		<url>https://github.com//dzontak/insta4j</url>
+		<connection>scm:git:git@github.com:dzontak/insta4j.git</connection>
+		<developerConnection>scm:git:git@github.com:dzontak/insta4j.git</developerConnection>
 	</scm>
 	<distributionManagement>
 		<repository>
