--- a/insta4j-core/pom.xml
+++ b/insta4j-core/pom.xml
@@ -19,9 +19,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com//dzontak/insta4j</url>
-		<connection>scm:git:git://github.com/dzontak/insta4j.git</connection>
-		<developerConnection>scm:git:git://github.com/dzontak/insta4j.git</developerConnection>
+		<url>https://github.com/dzontak/insta4j</url>
+		<connection>scm:git:git@github.com:dzontak/insta4j.git</connection>
+		<developerConnection>scm:git:git@github.com:dzontak/insta4j.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
