--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.ooloo.insta4j</groupId>
+	<groupId>org.ooloo</groupId>
 	<artifactId>insta4j</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -34,6 +34,87 @@
 			<timezone>-1</timezone>
 		</developer>
 	</developers>
+	<dependencies>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.16</version>
+				<scope>provided</scope>
+				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.8.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey</groupId>
+				<artifactId>jersey-client</artifactId>
+				<version>1.8</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey</groupId>
+				<artifactId>jersey-json</artifactId>
+				<version>1.8</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey.jersey-test-framework</groupId>
+				<artifactId>jersey-test-framework-core</artifactId>
+				<version>1.8</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey.contribs</groupId>
+				<artifactId>jersey-apache-client</artifactId>
+				<version>1.8</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey.contribs</groupId>
+				<artifactId>jersey-spring</artifactId>
+				<version>1.8</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey.contribs.jersey-oauth</groupId>
+				<artifactId>oauth-signature</artifactId>
+				<version>1.8</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey.contribs.jersey-oauth</groupId>
+				<artifactId>oauth-client</artifactId>
+				<version>1.8</version>
+				<scope>compile</scope>
+			</dependency>
+			<!-- Jackson -->
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-core-lgpl</artifactId>
+				<version>1.8.3</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-lgpl</artifactId>
+				<version>1.8.3</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-xc</artifactId>
+				<version>1.8.3</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+			    <groupId>javax.ws.rs</groupId>
+			    <artifactId>jsr311-api</artifactId>
+			    <version>0.11</version>
+			    <scope>compile</scope>
+			</dependency>
+		</dependencies>
 	<modules>
 		<module>insta4j-core</module>
 		<module>insta4j-client</module>
