--- a/insta4j-core/pom.xml
+++ b/insta4j-core/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>insta4j</artifactId>
 		<groupId>com.idtmatter</groupId>
-		<version>1.0.0</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.idtmatter</groupId>
