[maven-release-plugin] prepare release insta4j-1.0.0

--- a/insta4j-client/pom.xml
+++ b/insta4j-client/pom.xml
@@ -13,8 +13,7 @@
   ~   limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>insta4j</artifactId>
 		<groupId>com.idtmatter</groupId>
@@ -23,7 +22,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.idtmatter</groupId>
 	<artifactId>insta4j-client</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>insta4j-client</name>
 	<description>A Java library for the Instapaper full API</description>
