--- a/insta4j-simpleclient/pom.xml
+++ b/insta4j-simpleclient/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>insta4j</artifactId>
-		<groupId>com.idtmatter</groupId>
-		<version>1.0.2-SNAPSHOT</version>
+		<groupId>org.okiju</groupId>
+		<version>1.0.3</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>insta4j-simpleclient</artifactId>
-	<groupId>com.idtmatter</groupId>
+	<groupId>org.okiju</groupId>
 	<packaging>jar</packaging>
 	<name>insta4j-simpleclient</name>
-	<url>https://github.com//dzontak/insta4j</url>
+	<url>https://github.com//amisai/insta4j</url>
 	<licenses>
 		<license>
 			<name>Apache License 2.0</name>
@@ -17,23 +17,25 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<jersey.version>1.11</jersey.version>
+	</properties>
 	<scm>
-		<url>https://github.com/dzontak/insta4j</url>
-		<connection>scm:git:git@github.com:dzontak/insta4j.git</connection>
-		<developerConnection>scm:git:git@github.com:dzontak/insta4j.git</developerConnection>
+		<url>https://github.com/amisai/insta4j</url>
+		<connection>scm:git:git@github.com:amisai/insta4j.git</connection>
+		<developerConnection>scm:git:git@github.com:amisai/insta4j.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
-			<id>dzontak</id>
-			<name>Denis Zontak</name>
-			<email>dzontak@gmail.com</email>
-			<url>http://toilettwit.info</url>
+			<id>amisai</id>
 			<roles>
 				<role>lead</role>
 				<role>architect</role>
 				<role>developer</role>
 			</roles>
-			<timezone>-1</timezone>
+			<timezone>+1</timezone>
 		</developer>
 		<developer>
 			<id>skunnumkal</id>
@@ -46,46 +48,45 @@
 	</developers>
 	<dependencies>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-			<scope>provided</scope>
-			<optional>true</optional>
+			<groupId>org.okiju</groupId>
+			<artifactId>insta4j-core</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>0.9.29</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-core</artifactId>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>1.8</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-core</artifactId>
-			<version>1.8</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.2.3-1</version>
 		</dependency>
-		<dependency>
-			<groupId>com.idtmatter</groupId>
-			<artifactId>insta4j-core</artifactId>
-			<version>1.0.2-SNAPSHOT</version>
-		</dependency>
+
 	</dependencies>
-	<repositories>
-		<repository>
-			<id>maven2-repository.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<testResources>
@@ -189,8 +190,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	</properties>
 </project>
